syntax = "proto3";

// Note: largely inspired by
// https://github.com/prysmaticlabs/prysm/tree/develop/proto/eth/v1

package xatu.eth.v1;

option go_package = "github.com/ethpandaops/xatu/pkg/proto/eth/v1";

import "google/protobuf/wrappers.proto";
import "google/protobuf/descriptor.proto";
import "pkg/proto/eth/v1/sync_committee.proto";

message EventHead {
  uint64 slot = 1;

  string block = 2;

  string state = 3;

  bool epoch_transition = 4 [ json_name = "epoch_transition" ];

  string previous_duty_dependent_root = 5
      [ json_name = "previous_duty_dependent_root" ];

  string current_duty_dependent_root = 6
      [ json_name = "current_duty_dependent_root" ];
}

message EventHeadV2 {
  google.protobuf.UInt64Value slot = 1  [ json_name = "slot" ];

  string block = 2;

  string state = 3;

  bool epoch_transition = 4 [ json_name = "epoch_transition" ];

  string previous_duty_dependent_root = 5
      [ json_name = "previous_duty_dependent_root" ];

  string current_duty_dependent_root = 6
      [ json_name = "current_duty_dependent_root" ];
}

message EventBlock {
  uint64 slot = 1;

  string block = 2;

  bool execution_optimistic = 3 [ json_name = "execution_optimistic" ];
}

message EventBlockV2 {
  google.protobuf.UInt64Value slot = 1  [ json_name = "slot" ];

  string block = 2;

  bool execution_optimistic = 3 [ json_name = "execution_optimistic" ];
}

message EventChainReorg {
  uint64 slot = 1;

  uint64 depth = 2;

  string old_head_block = 3 [ json_name = "old_head_block" ];

  string new_head_block = 4 [ json_name = "new_head_block" ];

  string old_head_state = 5 [ json_name = "old_head_state" ];

  string new_head_state = 6 [ json_name = "new_head_state" ];

  uint64 epoch = 7;
}

message EventChainReorgV2 {
  google.protobuf.UInt64Value slot = 1 [ json_name = "slot" ];

  google.protobuf.UInt64Value depth = 2  [ json_name = "depth" ];

  string old_head_block = 3 [ json_name = "old_head_block" ];

  string new_head_block = 4 [ json_name = "new_head_block" ];

  string old_head_state = 5 [ json_name = "old_head_state" ];

  string new_head_state = 6 [ json_name = "new_head_state" ];

  google.protobuf.UInt64Value epoch = 7 [ json_name = "epoch" ];
}

message EventFinalizedCheckpoint {
  string block = 1;

  string state = 2;

  uint64 epoch = 3;
}

message EventFinalizedCheckpointV2 {
  string block = 1;

  string state = 2;

  google.protobuf.UInt64Value epoch = 3 [ json_name = "epoch" ];
}

message EventVoluntaryExitMessage {
  uint64 epoch = 1;

  uint64 validator_index = 2 [ json_name = "validator_index" ];
}

message EventVoluntaryExitMessageV2 {
  google.protobuf.UInt64Value epoch = 1 [ json_name = "epoch" ];

  google.protobuf.UInt64Value validator_index = 2 [ json_name = "validator_index" ];
}

message EventVoluntaryExit {
  uint64 epoch = 1 [deprecated=true];

  uint64 validator_index = 2 [ json_name = "validator_index", deprecated=true ];

  EventVoluntaryExitMessage message = 3 [ json_name = "message" ];

  string signature = 4;
}

message EventVoluntaryExitV2 {
  EventVoluntaryExitMessageV2 message = 3 [ json_name = "message" ];

  string signature = 4;
}

message ContributionAndProof {
  uint64 aggregator_index = 1 [ json_name = "aggregator_index" ];

  SyncCommitteeContribution contribution = 2;

  string selection_proof = 3 [ json_name = "selection_proof" ];
}

message ContributionAndProofV2 {
  google.protobuf.UInt64Value aggregator_index = 1 [ json_name = "aggregator_index" ];

  SyncCommitteeContributionV2 contribution = 2;

  string selection_proof = 3 [ json_name = "selection_proof" ];
}

message EventContributionAndProof {
  string signature = 1;

  ContributionAndProof message = 2;
}

message EventContributionAndProofV2 {
  string signature = 1;

  ContributionAndProofV2 message = 2;
}

message EventBlobSidecar {
  string block_root = 1 [ json_name = "block_root" ];

  google.protobuf.UInt64Value slot = 2;

  google.protobuf.UInt64Value index = 3;

  string kzg_commitment = 4 [ json_name = "kzg_commitment" ];

  string versioned_hash = 5 [ json_name = "versioned_hash" ];
}